envoy-adapter/http-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: apigee
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: standalone-envoy
          servicePort: http
